# art

./: README.md  pyproject.toml
dataset/: download_all_test_data.sh
scripts/relation_tuple_verification/: addsub_eval.sh  asdiv_eval.sh  eval_gsm8k.sh  multiarith_eval.sh  run_relation_tuple.sh  singleeq_eval.sh  singleop_eval.sh  svamp_eval.sh
src/: evaluate.py  relation_tuple.py  tool.py
src/interpreter/: jupyter_backend.py
src/prompts/: eightshot_prompt_0603.py
