[tool.poetry]
name = "art"
version = "0.1.0"
description = ""
authors = ["miao <zhongtao.miao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
transformers = "4.40.0"
peft = "0.9.0"
accelerate = "0.27.2"
wandb = "0.16.4"
deepspeed = "0.13.1"
bitsandbytes = "0.42.0"
datasets = "2.18.0"
openai = "1.23.2"
tqdm = "4.66.2"
sentencepiece = "0.2.0"
reportlab = "4.2.0"
seaborn = "0.13.2"
termcolor = "2.4.0"
matplotlib = "3.8.4"
spacy = "3.7.4"
func-timeout = "4.3.5"
torch = { version = "2.3.0", source = "torch_cu121" }
vllm = "0.4.3"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
jupyter = "1.0.0"
ruff = "0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
